--- a/doc/master data/import data from master.ipynb
+++ b/doc/master data/import data from master.ipynb
@@ -330,7 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "titles.to_sql('title2',con=engine,index_label=\"id\")"
+    "titles.to_sql('title',con=engine,index_label=\"id\")"
    ]
   },
   {
@@ -469,7 +469,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "religious.to_sql('religion2',con=engine,index_label='id')"
+    "religious.to_sql('religion',con=engine,index_label='id')"
    ]
   },
   {
